--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,10 @@
 .App {
-  text-align: center;
+  /*text-align: center;*/
+  display: flex;
 }
-
+.App > div{
+  flex: 1;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
